增加spring-tx依赖，删除spirng-context依赖（由spring-tx自行引入）

--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,7 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>${version.spring}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
+      <artifactId>spring-tx</artifactId>
       <version>${version.spring-tx}</version>
     </dependency>
     <dependency>
