--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,18 @@
   <groupId>com.wrote-code.spring</groupId>
   <artifactId>spring-transaction</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <version.spring>5.3.9</version.spring>
+    <version.spring>5.3.13</version.spring>
+    <version.spring-mvc>5.3.13</version.spring-mvc>
     <version.spring-tx>5.3.9</version.spring-tx>
     <version.spring-data-jpa>2.7.9</version.spring-data-jpa>
+    <version.spring-web>5.3.9</version.spring-web>
     <version.hibernate>5.6.9.Final</version.hibernate>
     <version.slf4j>2.0.7</version.slf4j>
     <version.logback>1.4.7</version.logback>
@@ -33,6 +36,16 @@
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-jpa</artifactId>
       <version>${version.spring-data-jpa}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${version.spring-mvc}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${version.spring-web}</version>
     </dependency>
 
     <dependency>
