--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,13 @@
     <version.spring-data-jpa>2.7.9</version.spring-data-jpa>
     <version.spring-web>5.3.9</version.spring-web>
     <version.hibernate>5.6.9.Final</version.hibernate>
+    <version.hibernate-validator>6.2.5.Final</version.hibernate-validator>
+    <version.hibernate-jpamodelgen>5.6.12.Final</version.hibernate-jpamodelgen>
     <version.slf4j>2.0.7</version.slf4j>
     <version.logback>1.4.7</version.logback>
     <version.lombok>1.18.8</version.lombok>
     <version.mysql>8.0.29</version.mysql>
+    <version.el>2.2</version.el>
   </properties>
 
   <dependencies>
@@ -52,6 +55,27 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
       <version>${version.hibernate}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${version.hibernate-validator}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+      <version>${version.hibernate-jpamodelgen}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>el-impl</artifactId>
+      <version>${version.el}</version>
     </dependency>
 
     <dependency>
