--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <version.spring-tx>5.3.13</version.spring-tx>
     <version.spring-data-jpa>2.7.9</version.spring-data-jpa>
     <version.spring-web>5.3.13</version.spring-web>
+    <version.jackson>2.13.0</version.jackson>
     <version.hibernate>5.6.9.Final</version.hibernate>
     <version.hibernate-jpamodelgen>5.6.12.Final</version.hibernate-jpamodelgen>
     <version.slf4j>2.0.7</version.slf4j>
@@ -86,6 +87,22 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>${version.lombok}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>${version.jackson}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${version.jackson}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${version.jackson}</version>
     </dependency>
 
     <dependency>
