--- a/src/main/resources/config/sql.properties
+++ b/src/main/resources/config/sql.properties
@@ -1,3 +1,4 @@
 queryAll=select t1.*, t2.*, t3.* from account t1 \
   left join associate t2 on t1.id = t2.first_account_id \
-  left join contact t3 on t1.id = t3.account_id
+  left join contact t3 on t1.id = t3.account_id \
+  order by t1.id desc
